# alterstack

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  dependances.md  dependencies.md
example/: futex.cpp
ext/context/: CMakeLists.txt  README.txt
ext/context/include/: scontext.hpp  switch_context.hpp
ext/context/test/: test_scontext.cpp
include/: Futex.hpp
include/alterstack/: Awaitable.hpp  BgRunner.hpp  BgThread.hpp  Context.hpp  Futex.hpp  NativeInfo.hpp  Scheduler.hpp  Task.hpp  TaskState.hpp  api.h  api.hpp  awaitable.hpp  bg_runner.h  bg_runner.hpp  bg_thread.h  bg_thread.hpp  bound_buffer.hpp  context.hpp  futex.h  futex.hpp  intrusive_list.hpp  lock_free_queue.hpp  lock_free_stack.hpp  logger.h  logger.hpp  os_utils.hpp  passkey.hpp  runner_info.h  runner_info.hpp  running_queue.hpp  scheduler.h  scheduler.hpp  stack.hpp  task.h  task.hpp  task_buffer.hpp  task_runner.hpp  task_stack.hpp
src/: BgRunner.cpp  BgThread.cpp  Scheduler.cpp  Task.cpp  awaitable.cpp  bg_runner.cpp  bg_thread.cpp  scheduler.cpp  stack.cpp  statics_init.cpp  task.cpp
test/: CMakeLists.txt  TaskRun.cpp  gai_check.cpp  task_buffer.cpp  task_run.cpp  task_run_simple.cpp  task_stack.cpp  task_wait.cpp  task_yield.cpp
test/integration/: CMakeLists.txt  task_run.cpp  task_run_simple.cpp  task_wait.cpp  task_yield.cpp
test/load/: CMakeLists.txt  load_bound_buffer.cpp  load_futex.cpp  load_lock_free_queue.cpp  load_running_queue.cpp
test/load_test/: load_futex.cpp  load_task_buffer.cpp
test/unit/: CMakeLists.txt  bound_buffer.cpp  unit_lock_free_queue.cpp  unit_lock_free_stack.cpp
